# hw2

./: CMakeLists.txt
.github/workflows/: blank.yml
include/: count.h  multithreding_count.h
src/: CMakeLists.txt  count.c  linear_count.c  main.c  multithreding_count.c
test/: CMakeLists.txt  count.cpp  linear.cpp  multi.cpp
